ecs-terraform/import.tf
resource "aws_instance" "ardocd" {
  ami           = "ami-0db56f446d44f2f09" # Put your instance ID here as a temporary placeholder
  instance_type = "t3.micro"
}
